--- a/MusicTaste/Podfile
+++ b/MusicTaste/Podfile
@@ -10,7 +10,7 @@ target 'MusicTaste' do
   pod 'Parse/UI'
   pod 'GMImagePicker'
   pod 'AFNetworking'
-  pod 'BDBOAuth1Manager'
+  pod 'HTPressableButton'
 
   target 'MusicTasteTests' do
     inherit! :search_paths
